<resources>
    <string name="app_name">ToDoRenouArthur</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="connexion">Connexion</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="choisir_une_image">Choisir une Image</string>
    <string name="prendre_une_photo">Prendre une photo</string>
    <string name="name">Name</string>
    <string name="task">Task</string>
    <string name="description">Description</string>
</resources>